src/test/deca/context/valid/created/objet/classe_null.deca
// Description :
// test classe null
//
// Resultats :
// ok

class A {
     int x;

}

{
    A a = null ;
}