src/test/deca/context/invalid/created/sans_objet/operateur_arith_3.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//   error : invalid assign
//
// Historique:
//    cree le 13/01/2024

{
        boolean a = 2;
        int b = 1;
        int x= a/b ;
}